--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
   <meta charset="UTF-8" />
   <title>Messenger Chat App</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
   <style>
-    * { box-sizing: border-box; }
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
@@ -16,6 +20,7 @@
       align-items: center;
       height: 100vh;
     }
+
     .container {
       width: 100%;
       max-width: 500px;
@@ -25,21 +30,33 @@
       background: #1e1e1e;
       border-left: 1px solid #333;
       border-right: 1px solid #333;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
     }
+
     h2 {
       text-align: center;
       margin: 0;
       padding: 1em;
       background: #000;
       font-size: 1.2em;
-      color: #00aaff;
       border-bottom: 1px solid #333;
+      color: #00aaff;
     }
+
+    #loginDiv {
+      padding: 2em;
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+
     input, button {
       font-size: 1rem;
       border-radius: 10px;
       border: none;
     }
+
     input {
       width: 100%;
       margin: 0.4em 0;
@@ -48,29 +65,29 @@
       color: white;
       border: 1px solid #444;
     }
+
     button {
       background: #0078ff;
       color: white;
+      font-weight: bold;
+      cursor: pointer;
       padding: 0.8em;
       margin-top: 0.4em;
-      cursor: pointer;
     }
-    button:hover { background: #005ecb; }
-    #loginDiv {
-      padding: 2em;
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
+
+    button:hover {
+      background: #005ecb;
     }
+
     #chatDiv {
       display: none;
       flex: 1;
       flex-direction: column;
       overflow: hidden;
     }
+
     #userList {
-      max-height: 120px;
+      max-height: 150px;
       overflow-y: auto;
       padding: 0.5em;
       display: flex;
@@ -78,36 +95,56 @@
       gap: 0.5em;
       border-bottom: 1px solid #333;
     }
+
     .user-item {
       padding: 0.6em 1em;
       background: #2a2a2a;
+      color: white;
       border-radius: 10px;
       cursor: pointer;
     }
-    .user-item.active { background: #0078ff; }
+
+    .user-item.active {
+      background: #0078ff;
+    }
+
     #chat {
       flex: 1;
       overflow-y: auto;
       padding: 0.8em;
-      padding-bottom: 100px;
+      padding-bottom: 90px;
       display: flex;
       flex-direction: column;
     }
+
     .msg {
       padding: 0.7em 1em;
       border-radius: 18px;
       margin: 0.3em 0;
       max-width: 75%;
       font-size: 0.95em;
+      line-height: 1.4;
       word-wrap: break-word;
     }
+
     .msg img, .msg video {
       max-width: 100%;
       border-radius: 10px;
       margin-top: 0.4em;
     }
-    .from-me { background: #0078ff; color: white; align-self: flex-end; }
-    .from-other { background: #3a3a3a; align-self: flex-start; }
+
+    .from-me {
+      background: #0078ff;
+      color: white;
+      align-self: flex-end;
+    }
+
+    .from-other {
+      background: #3a3a3a;
+      color: white;
+      align-self: flex-start;
+    }
+
     .loading-msg {
       font-size: 0.9em;
       color: #aaa;
@@ -115,6 +152,7 @@
       margin: 0.5em 0;
       align-self: flex-end;
     }
+
     #messageBar {
       position: fixed;
       bottom: 0;
@@ -130,6 +168,7 @@
       padding: 0.5em;
       max-width: 500px;
     }
+
     #msgInput {
       flex: 1;
       padding: 0.9em 1em;
@@ -139,34 +178,42 @@
       color: white;
       font-size: 1rem;
     }
+
     #uploadBtn, #sendBtn {
       background: #444;
       color: white;
       width: 36px;
       height: 36px;
       border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       font-size: 1.2rem;
       border: none;
       cursor: pointer;
     }
-    #fileInput { display: none; }
+
+    #fileInput {
+      display: none;
+    }
   </style>
 
-  <!-- Firebase SDKs -->
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-storage-compat.js"></script>
 </head>
 <body>
+
 <div class="container">
   <h2>Messenger Chat</h2>
+
   <div id="loginDiv">
-    <input id="emailInput" type="email" placeholder="Email">
-    <input id="passwordInput" type="password" placeholder="Password">
+    <input id="emailInput" type="email" placeholder="Email" />
+    <input id="passwordInput" type="password" placeholder="Password" />
     <button onclick="signup()">Sign Up</button>
     <button onclick="login()">Login</button>
     <div id="loginMsg" style="color:red;min-height:1.5em;"></div>
   </div>
+
   <div id="chatDiv">
     <p style="padding:0.5em">
       Logged in as <span id="currentUserEmail"></span>
@@ -178,8 +225,8 @@
 </div>
 
 <div id="messageBar">
-  <input id="msgInput" placeholder="Type a message...">
-  <input type="file" id="fileInput" accept="image/*,video/*" onchange="sendMedia()">
+  <input id="msgInput" placeholder="Type a message..." />
+  <input type="file" id="fileInput" accept="image/*,video/*" onchange="sendMedia()" />
   <button id="uploadBtn" onclick="document.getElementById('fileInput').click()">📎</button>
   <button id="sendBtn" onclick="sendMessage()">➤</button>
 </div>
@@ -197,17 +244,10 @@
 
   firebase.initializeApp(firebaseConfig);
   const db = firebase.database();
-  const storage = firebase.storage();
 
   let currentUser = null;
   let selectedUser = null;
   let chatRef = null;
-
-  const emailInput = document.getElementById('emailInput');
-  const passwordInput = document.getElementById('passwordInput');
-  const loginMsg = document.getElementById('loginMsg');
-  const chatBox = document.getElementById('chat');
-  const msgInput = document.getElementById('msgInput');
 
   function uid(email) {
     return btoa(email).replace(/=/g, '');
@@ -216,6 +256,10 @@
   function signup() {
     const email = emailInput.value.trim();
     const password = passwordInput.value.trim();
+    if (!email || !password) {
+      loginMsg.textContent = "Email and password required.";
+      return;
+    }
     const userId = uid(email);
     db.ref("users/" + userId).once('value').then(snapshot => {
       if (snapshot.exists()) {
@@ -254,7 +298,7 @@
     currentUser = null;
     selectedUser = null;
     if (chatRef) chatRef.off();
-    chatBox.innerHTML = '';
+    document.getElementById("chat").innerHTML = '';
     document.getElementById("loginDiv").style.display = "flex";
     document.getElementById("chatDiv").style.display = "none";
     document.getElementById("messageBar").style.display = "none";
@@ -287,6 +331,7 @@
 
   function loadChat() {
     if (chatRef) chatRef.off();
+    const chatBox = document.getElementById("chat");
     chatBox.innerHTML = '';
     if (!selectedUser) return;
     const path = `messages/${currentUser.uid}/${selectedUser}`;
@@ -315,6 +360,7 @@
   }
 
   function sendMessage() {
+    const msgInput = document.getElementById("msgInput");
     const text = msgInput.value.trim();
     if (!text || !selectedUser) return;
 
@@ -339,47 +385,43 @@
     const file = document.getElementById('fileInput').files[0];
     if (!file || !selectedUser) return;
 
-    const fileName = `${Date.now()}_${file.name}`;
-    const storageRef = storage.ref().child(`chat_media/${fileName}`);
+    const reader = new FileReader();
+    const chatBox = document.getElementById("chat");
 
+    // Add loading message
     const loadingDiv = document.createElement("div");
     loadingDiv.className = "loading-msg";
-    loadingDiv.textContent = "Uploading: 0%";
+    loadingDiv.textContent = "Uploading media...";
     chatBox.appendChild(loadingDiv);
     chatBox.scrollTop = chatBox.scrollHeight;
 
-    const uploadTask = storageRef.put(file);
-    uploadTask.on('state_changed',
-      snapshot => {
-        const progress = Math.floor((snapshot.bytesTransferred / snapshot.totalBytes) * 100);
-        loadingDiv.textContent = `Uploading: ${progress}%`;
-      },
-      error => {
-        loadingDiv.textContent = "Upload failed!";
-        console.error(error);
-      },
-      () => {
-        uploadTask.snapshot.ref.getDownloadURL().then(downloadURL => {
-          const newKey = db.ref().push().key;
-          const msgObj = {
-            from: currentUser.uid,
-            to: selectedUser,
-            timestamp: Date.now()
-          };
-          if (file.type.startsWith("image")) msgObj.imageUrl = downloadURL;
-          if (file.type.startsWith("video")) msgObj.videoUrl = downloadURL;
+    reader.onload = () => {
+      const newKey = db.ref().push().key;
+      const fileUrl = reader.result;
+      const isImage = file.type.startsWith("image");
+      const isVideo = file.type.startsWith("video");
 
-          const updates = {};
-          updates[`messages/${currentUser.uid}/${selectedUser}/${newKey}`] = msgObj;
-          updates[`messages/${selectedUser}/${currentUser.uid}/${newKey}`] = msgObj;
+      const msgObj = {
+        from: currentUser.uid,
+        to: selectedUser,
+        timestamp: Date.now()
+      };
 
-          db.ref().update(updates).then(() => {
-            loadingDiv.remove();
-          });
-        });
-      }
-    );
+      if (isImage) msgObj.imageUrl = fileUrl;
+      if (isVideo) msgObj.videoUrl = fileUrl;
+
+      const updates = {};
+      updates[`messages/${currentUser.uid}/${selectedUser}/${newKey}`] = msgObj;
+      updates[`messages/${selectedUser}/${currentUser.uid}/${newKey}`] = msgObj;
+
+      db.ref().update(updates).then(() => {
+        loadingDiv.remove(); // remove "Uploading..." after sending
+      });
+    };
+
+    reader.readAsDataURL(file);
   }
 </script>
+
 </body>
 </html>
